--- a/AppWeb.Client/Shared/SidebarNav.razor
+++ b/AppWeb.Client/Shared/SidebarNav.razor
@@ -33,6 +33,10 @@
                           Class="py-3 px-4 my-1 rounded-md transition-all duration-200 hover:translate-x-1">
                     Login
                 </MudNavLink>
+                <MudNavLink Href="/users/create" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Login"
+                            Class="py-3 px-4 my-1 rounded-md transition-all duration-200 hover:translate-x-1">
+                    Registrarse
+                </MudNavLink>
             </NotAuthorized>
         </AuthorizeView>
     </div>
