--- a/AppWeb.Client/Features/Users/Components/FormUser.razor
+++ b/AppWeb.Client/Features/Users/Components/FormUser.razor
@@ -1,22 +1,20 @@
 @using Microsoft.AspNetCore.Components.Web
+@using AppWeb.Shared.Validators
+@using FluentValidation.Results
 @using AppWeb.Shared.Inputs
-@using AppWeb.Shared.Dtos
 @using FluentValidation
 @using MudBlazor
-
-@inject FormUserVM ViewModel
-@implements IDisposable
 
 <MudCard Class="rounded-lg overflow-hidden">
     <MudCardHeader>
         <div class="flex items-center">
-            <MudIcon Icon="@(ViewModel.IsEdit? Icons.Material.Filled.Edit : Icons.Material.Filled.PersonAdd)" Color="Color.Primary" Class="mr-2" />
-            <MudText Typo="Typo.h6">@(ViewModel.IsEdit ? "Edit User" : "Create User")</MudText>
+            <MudIcon Icon="@(Existing != null ? Icons.Material.Filled.Edit : Icons.Material.Filled.PersonAdd)" Color="Color.Primary" Class="mr-2" />
+            <MudText Typo="Typo.h6">@(Existing != null ? "Edit User" : "Create User")</MudText>
         </div>
     </MudCardHeader>
 
     <MudCardContent Class="pa-4 min-width-300">
-        @if (ViewModel.Loading)
+        @if (Loading)
         {
             <div class="flex justify-center items-center min-h-[150px]">
                 <MudProgressCircular Color="Color.Primary" Indeterminate="true" Size="Size.Medium" />
@@ -24,15 +22,15 @@
         }
         else
         {
-            @if (ViewModel.Success)
+            @if (Success)
             {
                 <MudAlert Severity="MudBlazor.Severity.Success" Variant="Variant.Filled" Class="mb-4">
-                    @(ViewModel.IsEdit ? "User updated successfully!" : "User created successfully!")
+                    @(Existing != null ? "User updated successfully!" : "User created successfully!")
                 </MudAlert>
             }
 
-            <MudForm @ref="_form" Model="@ViewModel.CurrentModel">
-                <FluentValidator TModel="object" Validator="@ViewModel.CurrentValidator" />
+            <MudForm @ref="_form" Model="@Input">
+                <FluentValidator TModel="object" Validator="@CurrentValidator" />
 
                 <div class="flex flex-col gap-4">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-x-6 gap-y-4">
@@ -41,47 +39,33 @@
                             <MudDivider Class="mb-4" />
                         </div>
 
-                        @if (ViewModel.IsEdit)
+                        @if (Existing != null && Input is UpdateUserInput updateModel)
                         {
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.UpdateModel.Username" For="@(() => ViewModel.UpdateModel.Username)" Label="Username" Placeholder="Enter username" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Person" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="updateModel.Username" For="@(() => updateModel.Username)" Label="Username" Placeholder="Enter username" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Person" Variant="Variant.Outlined" />
                             </div>
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.UpdateModel.Email" For="@(() => ViewModel.UpdateModel.Email)" Label="Email" Placeholder="Enter email address" Immediate="true" AdornmentIcon="@Icons.Material.Filled.Email" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="updateModel.Email" For="@(() => updateModel.Email)" Label="Email" Placeholder="Enter email address" Immediate="true" AdornmentIcon="@Icons.Material.Filled.Email" Variant="Variant.Outlined" />
                             </div>
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.UpdateModel.Password" For="@(() => ViewModel.UpdateModel.Password)" InputType="InputType.Password" Label="Password" Placeholder="Enter password" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Password" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="updateModel.Password" For="@(() => updateModel.Password)" InputType="InputType.Password" Label="Password" Placeholder="Enter password" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Password" Variant="Variant.Outlined" />
                             </div>
                         }
-                        else
+                        else if (Input is CreateUserInput createModel)
                         {
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.CreateModel.Username" For="@(() => ViewModel.CreateModel.Username)" Label="Username" Placeholder="Enter username" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Person" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="createModel.Username" For="@(() => createModel.Username)" Label="Username" Placeholder="Enter username" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Person" Variant="Variant.Outlined" />
                             </div>
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.CreateModel.Email" For="@(() => ViewModel.CreateModel.Email)" Label="Email" Placeholder="Enter email address" Immediate="true" AdornmentIcon="@Icons.Material.Filled.Email" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="createModel.Email" For="@(() => createModel.Email)" Label="Email" Placeholder="Enter email address" Immediate="true" AdornmentIcon="@Icons.Material.Filled.Email" Variant="Variant.Outlined" />
                             </div>
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.CreateModel.Password" For="@(() => ViewModel.CreateModel.Password)" InputType="InputType.Password" Label="Password" Placeholder="Enter password" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Password" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="createModel.Password" For="@(() => createModel.Password)" InputType="InputType.Password" Label="Password" Placeholder="Enter password" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Password" Variant="Variant.Outlined" />
                             </div>
                             <div>
-                                <MudTextField T="string" @bind-Value="ViewModel.CreateModel.ConfirmPassword" For="@(() => ViewModel.CreateModel.ConfirmPassword)" InputType="InputType.Password" Label="Confirm password" Placeholder="Enter password" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.LockReset" Variant="Variant.Outlined" />
+                                <MudTextField T="string" @bind-Value="createModel.ConfirmPassword" For="@(() => createModel.ConfirmPassword)" InputType="InputType.Password" Label="Confirm password" Placeholder="Enter password" Immediate="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.LockReset" Variant="Variant.Outlined" />
                             </div>
                         }
-                    </div>
-
-                    <div class="mt-4">
-                        <div class="col-span-2">
-                            <MudText Typo="Typo.subtitle1" Class="mb-2">Additional Settings</MudText>
-                            <MudDivider Class="mb-4" />
-                        </div>
-
-                        <div>
-                            <MudCheckBox T="bool" @bind-Value="ViewModel.IsActive" Label="Active Account" Color="Color.Primary" />
-                            <MudText Typo="Typo.caption" Color="Color.Secondary" Class="ml-4">
-                                User will be able to log in and access the system
-                            </MudText>
-                        </div>
                     </div>
                 </div>
             </MudForm>
@@ -91,32 +75,38 @@
     <MudCardActions>
         <MudSpacer />
         <MudButton Variant="Variant.Outlined"
-                   OnClick="@(() => ViewModel.CancelCommand.Execute(null))"
-                   Disabled="@ViewModel.Loading">
+                   Href="/users"
+                   Disabled="@Loading">
             Cancel
         </MudButton>
         <MudButton Variant="Variant.Filled"
                    Color="Color.Primary"
                    OnClick="@HandleSubmitAsync"
-                   Disabled="@ViewModel.Loading">
-            @(ViewModel.IsEdit ? "Update User" : "Create User")
+                   Disabled="@Loading">
+            @(Existing != null ? "Update User" : "Create User")
         </MudButton>
     </MudCardActions>
 </MudCard>
 
 @code {
-    [CascadingParameter] private IMudDialogInstance? MudDialog { get; set; }
-    [Parameter] public EventCallback<object> OnValidSubmit { get; set; }
+    [Parameter] public object Input { get; set; } = default!;
     [Parameter] public UserResultDto? Existing { get; set; }
+    [Parameter] public EventCallback OnSubmit { get; set; }
+    [Parameter] public bool Loading { get; set; }
+    [Parameter] public bool Success { get; set; }
+
     private MudForm _form = new();
+    private readonly CreateUserInputValidator _createValidator = new();
+    private readonly UpdateUserInputValidator _updateValidator = new();
+    public IValidator CurrentValidator => Input is UpdateUserInput updateModel ? (IValidator)_updateValidator : _createValidator;
 
-    protected override void OnInitialized()
-    { //Pass parameters to the ViewModel
-        ViewModel.MudDialog = MudDialog;
-        ViewModel.OnValidSubmit = OnValidSubmit;
-        ViewModel.Initialize(Existing);
+    private async Task HandleSubmitAsync()
+    {
+        await _form.Validate();
+        ValidationResult fvResult = Input is UpdateUserInput updateModel
+            ? _updateValidator.Validate(updateModel) //Case update
+            : _createValidator.Validate((CreateUserInput)Input);
+        if (!_form.IsValid || !fvResult.IsValid) return;
+        await OnSubmit.InvokeAsync();
     }
-
-    private async Task HandleSubmitAsync() { await ViewModel.SubmitCommand.ExecuteAsync(_form); }
-    public void Dispose() { } // Implement IDisposable to clean up resources if needed
 }
