--- a/AppWeb.Client/Shared/AuthorizedLayout.razor
+++ b/AppWeb.Client/Shared/AuthorizedLayout.razor
@@ -1,25 +1,30 @@
 @using Microsoft.AspNetCore.Components.Authorization
+@using AppWeb.ViewModels.Core.Services
 @using AppWeb.Client.Auth
 
-@inject JwtAuthStateProvider AuthStateProvider
-@inject NavigationManager NavigationManager
+@inject INavigationService NavigationService
 @inherits LayoutComponentBase
 
 <AuthorizeView>
     <Authorized>
         <MudLayout>
+            <!-- navbar top -->
             <MudAppBar Elevation="0">
                 <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
                 <MudText Typo="Typo.h6" Class="ml-3">Master Car</MudText>
                 <MudSpacer />
                 <MudIconButton Icon="@Icons.Material.Filled.Logout" Color="Color.Inherit" Edge="Edge.End" OnClick="@HandleLogout" />
             </MudAppBar>
+
+            <!-- sidebar -->
             <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="1">
                 <MudDrawerHeader>
                     <MudText Typo="Typo.h6">Master Car</MudText>
                 </MudDrawerHeader>
                 <NavMenu />
             </MudDrawer>
+
+            <!-- main content -->
             <MudMainContent>
                 <MudContainer MaxWidth="MaxWidth.Large" Class="my-4 pt-4">
                     @Body
@@ -44,8 +49,5 @@
     { _drawerOpen = !_drawerOpen; }
 
     private async Task HandleLogout()
-    {
-        await AuthStateProvider.SetToken(null);
-        NavigationManager.NavigateTo("/auth/login");
-    }
+    { await NavigationService.NavigateToAsync("/auth/logout"); }
 }
