--- a/AppWeb.Client/Shared/SidebarNav.razor
+++ b/AppWeb.Client/Shared/SidebarNav.razor
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Components.Authorization
-@using AppWeb.SharedClient.Auth
+@using AppWeb.Client.Auth
 @using MudBlazor
 
 @inject JwtAuthStateProvider AuthStateProvider
